--- a/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
+++ b/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,28 +19,18 @@
     "from support.ar_calculations import *\n",
     "import multiprocessing\n",
     "from tqdm import tqdm\n",
-    "from parfor import parfor"
+    "import multiprocessing\n",
+    "from multiprocessing.pool import ThreadPool\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_jan_5_2023_3cm\\\\calibration_15fps_00'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "_parent_folder = \"single_cam_jan_5_2023_3cm\"\n",
-    "_calib_filename = \"calibration_15fps_00\"\n",
+    "_parent_folder = \"cam_and_sensor_feb_1_2023_5cm\"\n",
+    "_calib_filename = \"calibration_30fps_00\"\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\")\n",
     "\n",
@@ -50,33 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "_recorded_folder_list = os.listdir(os.path.join(_base_pth, _parent_folder))\n",
     "_txt_pth = os.path.join(_base_pth, _parent_folder,\"00_analysis\", \"folder_list.txt\")\n",
-    "with open(_txt_pth, \"w\") as f:\n",
-    "    for i in _recorded_folder_list:\n",
-    "        f.write(i + \"\\n\")"
+    "# with open(_txt_pth, \"w\") as f:\n",
+    "#     for i in _recorded_folder_list:\n",
+    "#         f.write(i + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "camera matrix [[844.83674494   0.         365.27912269]\n",
-      " [  0.         845.06800186 278.18340944]\n",
-      " [  0.           0.           1.        ]]\n",
-      "distortion [[ 0.10971316 -0.93022571  0.01346217  0.00527896  1.47791377]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#calibration path\n",
     "_webcam_calib_pth = os.path.join(_calib_pth, \"webcam_calibration.msgpack\")\n",
@@ -94,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,39 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cores 12\n"
-     ]
-    }
-   ],
-   "source": [
-    "# available cores\n",
-    "print(\"cores\", multiprocessing.cpu_count())\n",
-    "# maximum threads\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31mFailed to restart the Kernel. \n",
-      "\u001B[1;31mUnable to start Kernel 'gs (Python 3.7.13)' due to connection timeout. \n",
-      "\u001B[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "_txt_pth = os.path.join(_base_pth, _parent_folder,\"00_analysis\", \"folder_list.txt\")\n",
     "\n",
@@ -160,28 +109,11 @@
     "df = pd.DataFrame(columns = [\"folder_name\", \"total_frames\", \"missing_frames\", \"percentage_missing\"])\n",
     "\n",
     "\"\"\"\n",
-    "These are the list of data to accquire\n",
-    "\"\"\"\n",
-    "\n",
-    "# loop through the folders\n",
-    "_per_missing = []\n",
-    "_total_frame_list = []\n",
-    "_missing_frame_list = []\n",
-    "fps_val = []\n",
-    "speed_val = []\n",
-    "quad_val = []\n",
-    "\n",
-    "\"\"\"\n",
     "Thread function\n",
     "\"\"\"\n",
-    "@parfor(_folder_list)\n",
     "def thread_fun(_folder_name):\n",
     "    _tmp_pth = os.path.join(_base_pth, _parent_folder, _folder_name)\n",
     "    _p, _t, _m = iter_analysis(_tmp_pth, _webcam_cam_mat, _webcam_dist)\n",
-    "    _per_missing.append(_p)\n",
-    "    _total_frame_list.append(_t)\n",
-    "    _missing_frame_list.append(_m)\n",
-    "    \n",
     "    # check fps value\n",
     "    fps_val.append(int(_folder_name.split(\"_\")[1]))\n",
     "    # check speed of movement\n",
@@ -190,7 +122,30 @@
     "    if _folder_name.split(\"_\")[2] == \"quad\":\n",
     "        quad_val.append(\"quad\")\n",
     "    else:\n",
-    "        quad_val.append(\"skateboard\")"
+    "        quad_val.append(\"skateboard\")\n",
+    "    return _p, _t, _m, fps_val, speed_val, quad_val\n",
+    "\n",
+    "with ThreadPool() as pool:\n",
+    "\t# call the function for each item in parallel\n",
+    "    # loop through the folders\n",
+    "    \"\"\"\n",
+    "    These are the list of data to accquire\n",
+    "    \"\"\"\n",
+    "    _per_missing = []\n",
+    "    _total_frame_list = []\n",
+    "    _missing_frame_list = []\n",
+    "    fps_val = []\n",
+    "    speed_val = []\n",
+    "    quad_val = []\n",
+    "\n",
+    "    for result in pool.map(thread_fun, _folder_list):\n",
+    "        _p, _t, _m, _fps_val, _speed_val, _quad_val = result\n",
+    "        _per_missing.append(_p)\n",
+    "        _total_frame_list.append(_t)\n",
+    "        _missing_frame_list.append(_m)\n",
+    "        fps_val.append(_fps_val)\n",
+    "        speed_val.append(_speed_val)\n",
+    "        quad_val.append(_quad_val)       "
    ]
   },
   {
@@ -242,13 +197,6 @@
     "print(df[(df[\"fps\"] == fps) & (df[\"object\"] == _obj)][\"percentage_missing\"].std())\n",
     "print(df[(df[\"fps\"] == fps) & (df[\"object\"] == _obj)][\"percentage_missing\"].max())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
