--- a/simulation/ipy_notebooks/sensor_fusion_sim.ipynb
+++ b/simulation/ipy_notebooks/sensor_fusion_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,343 @@
     "import time\n",
     "import sys\n",
     "import os\n",
+    "from scipy.signal import savgol_filter\n",
+    "from scipy.interpolate import interp1d\n",
+    "from tqdm import tqdm\n",
     "sys.path.append(os.path.join(os.getcwd(), \"..\", \"..\"))\n",
     "from support.mecanum_calculations import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\simulation\\\\..\\\\recording_programs\\\\test_data\\\\cam_and_sensor_feb_1_2023_5cm'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_parent_folder = \"cam_and_sensor_feb_1_2023_5cm\"\n",
+    "_folder_name = \"sk22_30_random_fast\"\n",
+    "_base_pth = os.path.dirname(os.getcwd())\n",
+    "_base_pth = os.path.join(_base_pth, \"..\",\"recording_programs\", \"test_data\", _parent_folder)\n",
+    "_base_pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_sk_df = pd.read_csv(os.path.join(_base_pth, _folder_name, \"imu01.csv\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sys_time</th>\n",
+       "      <th>rust_time</th>\n",
+       "      <th>e_fr</th>\n",
+       "      <th>e_fl</th>\n",
+       "      <th>e_rr</th>\n",
+       "      <th>e_rl</th>\n",
+       "      <th>rtc</th>\n",
+       "      <th>mils</th>\n",
+       "      <th>sync</th>\n",
+       "      <th>ax</th>\n",
+       "      <th>ay</th>\n",
+       "      <th>az</th>\n",
+       "      <th>gx</th>\n",
+       "      <th>gy</th>\n",
+       "      <th>gz</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-02-01 15:34:24.346123</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>35719</td>\n",
+       "      <td>-22683</td>\n",
+       "      <td>-43576</td>\n",
+       "      <td>-2411</td>\n",
+       "      <td>2023-02-01 09.04.23.000000 PM</td>\n",
+       "      <td>3974905</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.008334</td>\n",
+       "      <td>0.020710</td>\n",
+       "      <td>1.010580</td>\n",
+       "      <td>-0.061038</td>\n",
+       "      <td>0.270382</td>\n",
+       "      <td>0.230595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-02-01 15:34:24.516623</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>35719</td>\n",
+       "      <td>-22683</td>\n",
+       "      <td>-43576</td>\n",
+       "      <td>-2411</td>\n",
+       "      <td>2023-02-01 09.04.23.000000 PM</td>\n",
+       "      <td>3974915</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.006625</td>\n",
+       "      <td>0.016560</td>\n",
+       "      <td>1.010824</td>\n",
+       "      <td>0.076367</td>\n",
+       "      <td>0.132977</td>\n",
+       "      <td>0.184794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-02-01 15:34:24.517122</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>35719</td>\n",
+       "      <td>-22683</td>\n",
+       "      <td>-43576</td>\n",
+       "      <td>-2411</td>\n",
+       "      <td>2023-02-01 09.04.23.000000 PM</td>\n",
+       "      <td>3974926</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.002719</td>\n",
+       "      <td>0.019001</td>\n",
+       "      <td>1.010091</td>\n",
+       "      <td>-0.106839</td>\n",
+       "      <td>0.209313</td>\n",
+       "      <td>0.200061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-02-01 15:34:24.517122</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>35719</td>\n",
+       "      <td>-22683</td>\n",
+       "      <td>-43576</td>\n",
+       "      <td>-2411</td>\n",
+       "      <td>2023-02-01 09.04.23.000000 PM</td>\n",
+       "      <td>3974936</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.009311</td>\n",
+       "      <td>0.022907</td>\n",
+       "      <td>1.006917</td>\n",
+       "      <td>-0.076305</td>\n",
+       "      <td>0.209313</td>\n",
+       "      <td>0.398534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-02-01 15:34:24.517623</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>35719</td>\n",
+       "      <td>-22683</td>\n",
+       "      <td>-43576</td>\n",
+       "      <td>-2411</td>\n",
+       "      <td>2023-02-01 09.04.23.000000 PM</td>\n",
+       "      <td>3974946</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.008823</td>\n",
+       "      <td>0.015583</td>\n",
+       "      <td>1.010824</td>\n",
+       "      <td>-0.045770</td>\n",
+       "      <td>0.071909</td>\n",
+       "      <td>0.215328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5332</th>\n",
+       "      <td>2023-02-01 15:35:19.902523</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>32806</td>\n",
+       "      <td>-27561</td>\n",
+       "      <td>-50605</td>\n",
+       "      <td>-7284</td>\n",
+       "      <td>2023-02-01 09.05.19.000000 PM</td>\n",
+       "      <td>4030459</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.011752</td>\n",
+       "      <td>0.017048</td>\n",
+       "      <td>1.006673</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.117710</td>\n",
+       "      <td>0.154259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5333</th>\n",
+       "      <td>2023-02-01 15:35:19.913012</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>32806</td>\n",
+       "      <td>-27561</td>\n",
+       "      <td>-50605</td>\n",
+       "      <td>-7284</td>\n",
+       "      <td>2023-02-01 09.05.19.000000 PM</td>\n",
+       "      <td>4030469</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.012241</td>\n",
+       "      <td>0.019978</td>\n",
+       "      <td>1.006185</td>\n",
+       "      <td>0.015298</td>\n",
+       "      <td>0.132977</td>\n",
+       "      <td>0.245862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5334</th>\n",
+       "      <td>2023-02-01 15:35:19.923290</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>32806</td>\n",
+       "      <td>-27561</td>\n",
+       "      <td>-50605</td>\n",
+       "      <td>-7284</td>\n",
+       "      <td>2023-02-01 09.05.19.000000 PM</td>\n",
+       "      <td>4030480</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.012485</td>\n",
+       "      <td>0.022175</td>\n",
+       "      <td>1.006429</td>\n",
+       "      <td>-0.045770</td>\n",
+       "      <td>-0.034962</td>\n",
+       "      <td>0.245862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5335</th>\n",
+       "      <td>2023-02-01 15:35:19.933398</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>32806</td>\n",
+       "      <td>-27561</td>\n",
+       "      <td>-50605</td>\n",
+       "      <td>-7284</td>\n",
+       "      <td>2023-02-01 09.05.19.000000 PM</td>\n",
+       "      <td>4030490</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.011752</td>\n",
+       "      <td>0.017292</td>\n",
+       "      <td>1.008382</td>\n",
+       "      <td>-0.061038</td>\n",
+       "      <td>0.132977</td>\n",
+       "      <td>0.184794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5336</th>\n",
+       "      <td>2023-02-01 15:35:19.943923</td>\n",
+       "      <td>1.675246e+09</td>\n",
+       "      <td>32806</td>\n",
+       "      <td>-27561</td>\n",
+       "      <td>-50605</td>\n",
+       "      <td>-7284</td>\n",
+       "      <td>2023-02-01 09.05.19.000000 PM</td>\n",
+       "      <td>4030501</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.005893</td>\n",
+       "      <td>0.013386</td>\n",
+       "      <td>1.003988</td>\n",
+       "      <td>-0.122106</td>\n",
+       "      <td>-0.034962</td>\n",
+       "      <td>0.154259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5337 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        sys_time     rust_time   e_fr   e_fl   e_rr  e_rl  \\\n",
+       "0     2023-02-01 15:34:24.346123  1.675246e+09  35719 -22683 -43576 -2411   \n",
+       "1     2023-02-01 15:34:24.516623  1.675246e+09  35719 -22683 -43576 -2411   \n",
+       "2     2023-02-01 15:34:24.517122  1.675246e+09  35719 -22683 -43576 -2411   \n",
+       "3     2023-02-01 15:34:24.517122  1.675246e+09  35719 -22683 -43576 -2411   \n",
+       "4     2023-02-01 15:34:24.517623  1.675246e+09  35719 -22683 -43576 -2411   \n",
+       "...                          ...           ...    ...    ...    ...   ...   \n",
+       "5332  2023-02-01 15:35:19.902523  1.675246e+09  32806 -27561 -50605 -7284   \n",
+       "5333  2023-02-01 15:35:19.913012  1.675246e+09  32806 -27561 -50605 -7284   \n",
+       "5334  2023-02-01 15:35:19.923290  1.675246e+09  32806 -27561 -50605 -7284   \n",
+       "5335  2023-02-01 15:35:19.933398  1.675246e+09  32806 -27561 -50605 -7284   \n",
+       "5336  2023-02-01 15:35:19.943923  1.675246e+09  32806 -27561 -50605 -7284   \n",
+       "\n",
+       "                                rtc     mils  sync        ax        ay  \\\n",
+       "0     2023-02-01 09.04.23.000000 PM  3974905     0 -0.008334  0.020710   \n",
+       "1     2023-02-01 09.04.23.000000 PM  3974915     0 -0.006625  0.016560   \n",
+       "2     2023-02-01 09.04.23.000000 PM  3974926     0 -0.002719  0.019001   \n",
+       "3     2023-02-01 09.04.23.000000 PM  3974936     0 -0.009311  0.022907   \n",
+       "4     2023-02-01 09.04.23.000000 PM  3974946     0 -0.008823  0.015583   \n",
+       "...                             ...      ...   ...       ...       ...   \n",
+       "5332  2023-02-01 09.05.19.000000 PM  4030459     1 -0.011752  0.017048   \n",
+       "5333  2023-02-01 09.05.19.000000 PM  4030469     1 -0.012241  0.019978   \n",
+       "5334  2023-02-01 09.05.19.000000 PM  4030480     1 -0.012485  0.022175   \n",
+       "5335  2023-02-01 09.05.19.000000 PM  4030490     1 -0.011752  0.017292   \n",
+       "5336  2023-02-01 09.05.19.000000 PM  4030501     1 -0.005893  0.013386   \n",
+       "\n",
+       "            az        gx        gy        gz  \n",
+       "0     1.010580 -0.061038  0.270382  0.230595  \n",
+       "1     1.010824  0.076367  0.132977  0.184794  \n",
+       "2     1.010091 -0.106839  0.209313  0.200061  \n",
+       "3     1.006917 -0.076305  0.209313  0.398534  \n",
+       "4     1.010824 -0.045770  0.071909  0.215328  \n",
+       "...        ...       ...       ...       ...  \n",
+       "5332  1.006673  0.000031  0.117710  0.154259  \n",
+       "5333  1.006185  0.015298  0.132977  0.245862  \n",
+       "5334  1.006429 -0.045770 -0.034962  0.245862  \n",
+       "5335  1.008382 -0.061038  0.132977  0.184794  \n",
+       "5336  1.003988 -0.122106 -0.034962  0.154259  \n",
+       "\n",
+       "[5337 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_sk_df"
    ]
   },
   {
@@ -27,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mira",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -41,12 +376,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
