--- a/simulation/ipy_notebooks/mecanum_sensor_fusion.ipynb
+++ b/simulation/ipy_notebooks/mecanum_sensor_fusion.ipynb
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae9441ebc8>"
+       "<matplotlib.legend.Legend at 0x1f665a7f688>"
       ]
      },
      "execution_count": 4,
@@ -431,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae945cdb08>"
+       "<matplotlib.legend.Legend at 0x1f6691c6bc8>"
       ]
      },
      "execution_count": 7,
@@ -466,7 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae9678c748>"
+       "<matplotlib.legend.Legend at 0x1f669d7ec08>"
       ]
      },
      "execution_count": 8,
@@ -557,7 +557,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae9678f808>"
+       "<matplotlib.legend.Legend at 0x1f66a0045c8>"
       ]
      },
      "execution_count": 12,
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae97a0e908>"
+       "<matplotlib.legend.Legend at 0x1f669b63588>"
       ]
      },
      "execution_count": 13,
@@ -668,7 +668,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae94689508>"
+       "<matplotlib.legend.Legend at 0x1f668baa908>"
       ]
      },
      "execution_count": 15,
@@ -702,7 +702,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae948607c8>"
+       "<matplotlib.legend.Legend at 0x1f66aaefc08>"
       ]
      },
      "execution_count": 16,
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,16 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae94977d48>"
+       "<matplotlib.legend.Legend at 0x1f668606a08>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,16 +773,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae94f857c8>"
+       "<matplotlib.legend.Legend at 0x1f668626308>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
