include json to direct path

--- a/simulation/ipy_notebooks/omniwheel_check.ipynb
+++ b/simulation/ipy_notebooks/omniwheel_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\simulation\\\\..\\\\recording_programs\\\\test_data\\\\omni_9dof_feb_28_2023'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c75f897088>"
+       "<matplotlib.legend.Legend at 0x1ad07320288>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c767144fc8>"
+       "<matplotlib.legend.Legend at 0x1ad1cc16ac8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c72d96c388>"
+       "<matplotlib.legend.Legend at 0x1ad1c9bee48>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,54 +256,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61959/61959 [01:02<00:00, 988.83it/s] \n"
+      "100%|██████████| 61959/61959 [00:07<00:00, 8366.97it/s]\n"
      ]
     }
    ],
    "source": [
+    "# This cell is optimized to run faster using polars\n",
     "_mc_df = _mocap_df[[\"time\", _om[\"x\"], _om[\"y\"], _om[\"z\"]]].copy()\n",
     "_mc_df = _mc_df.rename(columns={_om[\"x\"]: \"x\", _om[\"y\"]: \"y\", _om[\"z\"]: \"z\"})\n",
     "# _mc_df = _mc_df.astype({\"x\": np.float64, \"y\": np.float64, \"z\": np.float64})\n",
     "\n",
-    "# _mc_df = pl.from_pandas(_mc_df)\n",
+    "_mc_pl_df = pl.from_pandas(_mc_df)\n",
     "\n",
-    "# apply rotation matrix\n",
-    "# for i in tqdm(range(len(_mc_df))):\n",
-    "#     _mc_df[i, 1:] = apply_rot_mat(_mc_df[i, 1:].to_numpy().T, rotMat, org)\n",
+    "my_dict = {\"x\":[],\"y\":[],\"z\":[]}\n",
     "\n",
     "for i in tqdm(range(len(_mc_df))):\n",
-    "    _mc_df.iloc[i, 1:] = apply_rot_mat(_mc_df.iloc[i, 1:].astype(np.float64).values.reshape(3,1), rotMat, org)\n"
+    "    _x, _y, _z = apply_rot_mat(_mc_pl_df[i, 1:].to_numpy().T, rotMat, org)\n",
+    "    my_dict[\"x\"].append(_x)\n",
+    "    my_dict[\"y\"].append(_y)\n",
+    "    my_dict[\"z\"].append(_z)\t\n",
+    "\n",
+    "_mc_df[\"x\"] = my_dict[\"x\"]\n",
+    "_mc_df[\"y\"] = my_dict[\"y\"]\n",
+    "_mc_df[\"z\"] = my_dict[\"z\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# rotate along y axis\n",
-    "# _mc_df[\"x\"] = _mc_df[\"x\"] * np.cos(np.deg2rad(90)) - _mc_df[\"z\"] * np.sin(np.deg2rad(90))"
+    "# _mc_df[\"x\"] = _mc_df[\"x\"] * np.cos(np.deg2rad(90)) - _mc_df[\"z\"] * np.sin(np.deg2rad(90))\n",
+    "\n",
+    "# _s = pl.Series(my_dict)\n",
+    "# _mc_pl_df.replace(\"x\", my_dict[\"x\"])\n",
+    "# _mc_pl_df.replace(\"y\", my_dict[\"y\"])\n",
+    "# _mc_pl_df.replace(\"z\", my_dict[\"z\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c776d35d08>"
+       "<matplotlib.legend.Legend at 0x1ad094982c8>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c744f9ab48>"
+       "<matplotlib.legend.Legend at 0x1ad07496188>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,20 +374,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61959/61959 [00:24<00:00, 2485.89it/s]\n",
-      "100%|██████████| 61959/61959 [00:00<00:00, 400726.10it/s]\n",
-      "100%|██████████| 61959/61959 [00:00<00:00, 127649.45it/s]\n"
+      "100%|██████████| 61959/61959 [00:28<00:00, 2167.58it/s]\n",
+      "100%|██████████| 61959/61959 [00:00<00:00, 371827.76it/s]\n",
+      "100%|██████████| 61959/61959 [00:00<00:00, 105297.00it/s]\n"
      ]
     }
    ],
    "source": [
+    "# This cell is optimized to run faster using polars\n",
+    "\n",
     "# calculate rotation matrix from xvec, zvec, org\n",
     "_m_df = _mocap_df.copy()\n",
     "_m_df = pl.from_pandas(_m_df)\n",
@@ -416,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c761155ec8>"
+       "<matplotlib.legend.Legend at 0x1ad1234cf48>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -450,16 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c776d35b08>"
+       "<matplotlib.legend.Legend at 0x1ad0e99a488>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -481,6 +494,37 @@
     "plt.xlabel(\"time stamp\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'somepath'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "f = open('analysis_pth.json')\n",
+    "_var = json.load(f)\n",
+    "f.close()\n",
+    "_var[\"pth\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
