--- a/simulation/ipy_notebooks/omniwheel_check.ipynb
+++ b/simulation/ipy_notebooks/omniwheel_check.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2379afe7388>"
+       "<matplotlib.legend.Legend at 0x274d1234988>"
       ]
      },
      "execution_count": 4,
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2379e0373c8>"
+       "<matplotlib.legend.Legend at 0x274820e2588>"
       ]
      },
      "execution_count": 8,
@@ -219,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237b394f408>"
+       "<matplotlib.legend.Legend at 0x274fa753f08>"
       ]
      },
      "execution_count": 10,
@@ -298,7 +298,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61959/61959 [00:08<00:00, 7294.70it/s]\n"
+      "100%|██████████| 61959/61959 [00:15<00:00, 3922.10it/s]\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237a81d0d88>"
+       "<matplotlib.legend.Legend at 0x274fa4a5f48>"
       ]
      },
      "execution_count": 16,
@@ -426,7 +426,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237a82d0cc8>"
+       "<matplotlib.legend.Legend at 0x274fa5a2488>"
       ]
      },
      "execution_count": 17,
@@ -462,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237b02634c8>"
+       "<matplotlib.legend.Legend at 0x274f8fff5c8>"
       ]
      },
      "execution_count": 18,
@@ -498,9 +498,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61959/61959 [00:30<00:00, 2024.46it/s]\n",
-      "100%|██████████| 61959/61959 [00:00<00:00, 414166.34it/s]\n",
-      "100%|██████████| 61959/61959 [00:00<00:00, 114621.08it/s]\n"
+      "100%|██████████| 61959/61959 [00:30<00:00, 2017.25it/s]\n",
+      "100%|██████████| 61959/61959 [00:00<00:00, 388279.78it/s]\n",
+      "100%|██████████| 61959/61959 [00:00<00:00, 118553.08it/s]\n"
      ]
     }
    ],
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237a08e9488>"
+       "<matplotlib.legend.Legend at 0x27481f35bc8>"
       ]
      },
      "execution_count": 20,
@@ -590,16 +590,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x237a789bfc8>"
+       "<matplotlib.legend.Legend at 0x27480a5c308>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2379f2598c8>"
+       "<matplotlib.legend.Legend at 0x27482657688>"
       ]
      },
      "execution_count": 24,
@@ -675,7 +675,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x237a421be48>]"
+       "[<matplotlib.lines.Line2D at 0x27481f9ba88>]"
       ]
      },
      "execution_count": 25,
@@ -706,7 +706,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x237a436d408>]"
+       "[<matplotlib.lines.Line2D at 0x2748202cb48>]"
       ]
      },
      "execution_count": 26,
