--- a/simulation/ipy_notebooks/encoder_validation.ipynb
+++ b/simulation/ipy_notebooks/encoder_validation.ipynb
@@ -866,7 +866,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
